content config added, tutorial finished

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,17 @@
-<body>
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+---
+import {getCollection} from 'astro:content';
 
-<h1>My Astro Site</h1>
-<h1>My Astro Learning Blog</h1>
-<p>This is where I will post about my journey learning Astro.</p>
-</body>
+import BaseLayout from '../layouts/BaseLayout.astro';
+const allPosts = await getCollection('posts');
+const pageTitle = "My Astro Learning Blog";
+import BlogPost from '../components/BlogPost.astro';
+
+---
+
+<BaseLayout pageTitle={pageTitle}>
+  <p>This is where I will post about my journey learning Astro.</p>
+
+  <ul>
+    {allPosts.map((post) => <BlogPost url={post.slug} title={post.data.title} />)}
+  </ul>
+</BaseLayout>
