--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,12 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = 'Home Page';
+import Greeting from '../components/Greeting.jsx';
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>My awesome blog subtitle</h2>
+	<Greeting client:load messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+</BaseLayout>
 
-		<h1>My Astro Site</h1>
-	</body>
-</html>
